--- a/index.html
+++ b/index.html
@@ -13,101 +13,101 @@
 </head>
 <body>
 
-<header class="content-grid">
-    <div class="hero full-width">
-        <h1>Puglia Flavors</h1>
-        <h2>authentic Apulian taste</h2>
-    </div>
-</header>
-
-<!--main-->
-<main class="content-grid pt-5">
-
-    <nav class="navbar navbar-expand-lg sticky-top border-bottom">
-        <div class="container-fluid px-0">
-            <h3>Puglia Flavors</h3>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-lg-auto">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                <a class="nav-link" href="#">Services</a>
-                <a class="nav-link" href="#">FAQ</a>
-                <a class="nav-link" href="#">Review</a>
-                <a class="nav-link" href="#">Contact me</a>
-            </div>
-            </div>
+    <header class="content-grid">
+        <div class="hero full-width">
+            <h1>Puglia Flavors</h1>
+            <h2>authentic Apulian taste</h2>
         </div>
-    </nav>
+    </header>
 
-    <h2>
-        Welcome to Chef Claudio Cisternino's Kitchen!
-    </h2>
+    <!--main-->
+    <main class="content-grid pt-5">
 
-    <p>
-        Explore the <strong>authentic flavors of Puglia</strong> with tailor-made culinary experiences. We use fresh, local ingredients to bring the Pugliese tradition directly to your table, making every meal a memorable event.
-    </p>
+        <nav class="navbar navbar-expand-lg sticky-top border-bottom">
+            <div class="container-fluid px-0">
+                <h3>Puglia Flavors</h3>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ms-lg-auto">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="#">FAQ</a>
+                    <a class="nav-link" href="#">Review</a>
+                    <a class="nav-link" href="#">Contact me</a>
+                </div>
+                </div>
+            </div>
+        </nav>
 
-    <p>
-        Chef Claudio offers you an authentic Pugliese culinary experience, where tradition, culture, and local flavors come together to <strong>celebrate the cuisine of our beloved region</strong>. Born and raised in Puglia, Chef Claudio has inherited a passion for fresh, natural food and eagerly shares his knowledge with guests.
-    </p>
+        <h2>
+            Welcome to Chef Claudio Cisternino's Kitchen!
+        </h2>
 
-    <p>
-        Perfect for those on vacation or looking to relax, Chef Claudio offers a personal chef service for <strong>private dinners</strong> or <strong>special events</strong>. Additionally, you can join hands-on <strong>cooking classes</strong>, learning to prepare traditional dishes that you’ll be able to recreate for a lifetime.
-    </p>
+        <p>
+            Explore the <strong>authentic flavors of Puglia</strong> with tailor-made culinary experiences. We use fresh, local ingredients to bring the Pugliese tradition directly to your table, making every meal a memorable event.
+        </p>
 
-    <img src="/assets/images/tomato-pasta.jpg" alt="">
+        <p>
+            Chef Claudio offers you an authentic Pugliese culinary experience, where tradition, culture, and local flavors come together to <strong>celebrate the cuisine of our beloved region</strong>. Born and raised in Puglia, Chef Claudio has inherited a passion for fresh, natural food and eagerly shares his knowledge with guests.
+        </p>
 
-    <h2>
-        About Puglia Flavors
-    </h2>
+        <p>
+            Perfect for those on vacation or looking to relax, Chef Claudio offers a personal chef service for <strong>private dinners</strong> or <strong>special events</strong>. Additionally, you can join hands-on <strong>cooking classes</strong>, learning to prepare traditional dishes that you’ll be able to recreate for a lifetime.
+        </p>
 
-    <p>
-        The mission of Puglia Flavors is to offer an <strong>authentic Pugliese gastronomic experience</strong> directly to your home. We are dedicated to bringing the unique flavors and culinary traditions of Puglia to visitors from around the world. With a team of passionate and skilled chefs, we create dishes that tell the story and culture of our land, turning every meal into an unforgettable experience.
-    </p>
+        <img src="assets/images/tomato-pasta.webp" alt="">
 
-    <p>
-        Puglia Flavors is committed to showcasing and celebrating the richness of Pugliese cuisine through personalized in-home chef services. Our mission is to ensure that every dish not only meets but exceeds expectations, offering an authentic and refined culinary journey. Through our expertise and dedication, we transform every dinner into an opportunity to experience the true essence of <strong>Pugliese gastronomic tradition</strong>.
-    </p>
+        <h2>
+            About Puglia Flavors
+        </h2>
 
-    <img src="/assets/images/chef.jpg" alt="">
+        <p>
+            The mission of Puglia Flavors is to offer an <strong>authentic Pugliese gastronomic experience</strong> directly to your home. We are dedicated to bringing the unique flavors and culinary traditions of Puglia to visitors from around the world. With a team of passionate and skilled chefs, we create dishes that tell the story and culture of our land, turning every meal into an unforgettable experience.
+        </p>
 
-    <h2>
-        About Chef Claudio Cisternino
-    </h2>
+        <p>
+            Puglia Flavors is committed to showcasing and celebrating the richness of Pugliese cuisine through personalized in-home chef services. Our mission is to ensure that every dish not only meets but exceeds expectations, offering an authentic and refined culinary journey. Through our expertise and dedication, we transform every dinner into an opportunity to experience the true essence of <strong>Pugliese gastronomic tradition</strong>.
+        </p>
 
-    <p>
-        Chef Claudio Cisternino, an expert in Pugliese cuisine, founded Puglia Flavors to bring the authenticity of Puglia's flavors directly to the homes of food lovers.
-    </p>
+        <img src="assets/images/chef.webp" alt="">
 
-    <p>
-        With years of experience in gastronomy, Chef Claudio is dedicated to providing an exclusive private chef service, crafting dishes that reflect the rich culinary traditions of the region.
-    </p>
+        <h2>
+            About Chef Claudio Cisternino
+        </h2>
 
-    <p>
-        His project stems from a desire to share his passion for Pugliese cuisine with the world, offering personalized culinary experiences that turn every meal into a journey of taste.
-    </p>
+        <p>
+            Chef Claudio Cisternino, an expert in Pugliese cuisine, founded Puglia Flavors to bring the authenticity of Puglia's flavors directly to the homes of food lovers.
+        </p>
 
-</main>
+        <p>
+            With years of experience in gastronomy, Chef Claudio is dedicated to providing an exclusive private chef service, crafting dishes that reflect the rich culinary traditions of the region.
+        </p>
 
-<!--footer-->
-<footer class="content-grid">
-    <div>
-        <span>
-            © Copyright 2024 Puglia Flavors
-            <a href="">
-                All Rights Reserved
-            </a>
-        </span>
-        <span>
-            Site made by
-            <a href="">
-                Marco Vasto
-            </a>
-        </span>
-    </div>
-</footer> 
+        <p>
+            His project stems from a desire to share his passion for Pugliese cuisine with the world, offering personalized culinary experiences that turn every meal into a journey of taste.
+        </p>
+
+    </main>
+
+    <!--footer-->
+    <footer class="content-grid">
+        <div>
+            <span>
+                © Copyright 2024 Puglia Flavors
+                <a href="">
+                    All Rights Reserved
+                </a>
+            </span>
+            <span>
+                Site made by
+                <a href="">
+                    Marco Vasto
+                </a>
+            </span>
+        </div>
+    </footer> 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
