--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </header>
 
     <!--main-->
-    <main class="content-grid pt-5">
+    <main class="content-grid">
 
-        <nav class="navbar navbar-expand-lg sticky-top border-bottom">
+        <nav class="navbar navbar-expand-lg sticky-top border-bottom pt-4">
             <div class="container-fluid px-0">
                 <h3>Puglia Flavors</h3>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,9 +31,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-lg-auto">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Services</a>
-                    <a class="nav-link" href="#">FAQ</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link" href="services.html">Services</a>
+                    <a class="nav-link" href="faq.html">FAQ</a>
                     <a class="nav-link" href="#">Review</a>
                     <a class="nav-link" href="#">Contact me</a>
                 </div>
