added reviews, modified header, modified css

--- a/faq.html
+++ b/faq.html
@@ -13,6 +13,18 @@
 </head>
 <body>
 
+    <header>
+        <img src="assets/images/logo.png" alt="" class="mx-auto mt-3">
+        <div class="text-center">
+            <a href="">
+                <i class="fa-brands fa-instagram fa-xl px-2"></i>
+            </a>
+            <a href="">
+                <i class="fa-brands fa-linkedin-in fa-xl px-2"></i>
+            </a>
+        </div>
+    </header>
+
     <!--main-->
     <main class="content-grid">
 
@@ -27,7 +39,7 @@
                     <a class="nav-link" href="index.html">Home</a>
                     <a class="nav-link" href="services.html">Services</a>
                     <a class="nav-link active" aria-current="page" href="faq.html">FAQ</a>
-                    <a class="nav-link" href="#">Review</a>
+                    <a class="nav-link" href="reviews.html">Review</a>
                     <a class="nav-link" href="#">Contact me</a>
                 </div>
                 </div>
@@ -45,7 +57,7 @@
         <img src="assets/images/faq.webp" alt="">
 
         <h3>
-            What types of events do you offer?
+            <i class="fa-solid fa-circle-info"></i> What types of events do you offer?
         </h3>
 
         <p>
@@ -53,7 +65,7 @@
         </p>
 
         <h3>
-            How does the catering service work?
+            <i class="fa-solid fa-circle-info"></i> How does the catering service work?
         </h3>
 
         <p>
@@ -61,7 +73,7 @@
         </p>
 
         <h3>
-            What dishes can I expect at small events?
+            <i class="fa-solid fa-circle-info"></i> What dishes can I expect at small events?
         </h3>
 
         <p>
@@ -69,7 +81,7 @@
         </p>
 
         <h3>
-            Are cooking classes suitable for everyone?
+            <i class="fa-solid fa-circle-info"></i> Are cooking classes suitable for everyone?
         </h3>
 
         <p>
@@ -77,7 +89,7 @@
         </p>
 
         <h3>
-            How can I book one of the services?
+            <i class="fa-solid fa-circle-info"></i> How can I book one of the services?
         </h3>
 
         <p>
