--- a/services.html
+++ b/services.html
@@ -13,6 +13,18 @@
 </head>
 <body>
 
+    <header>
+        <img src="assets/images/logo.png" alt="" class="mx-auto mt-3">
+        <div class="text-center">
+            <a href="">
+                <i class="fa-brands fa-instagram fa-xl px-2"></i>
+            </a>
+            <a href="">
+                <i class="fa-brands fa-linkedin-in fa-xl px-2"></i>
+            </a>
+        </div>
+    </header>
+
     <!--main-->
     <main class="content-grid">
 
@@ -27,7 +39,7 @@
                     <a class="nav-link" href="index.html">Home</a>
                     <a class="nav-link active" aria-current="page" href="services.html">Services</a>
                     <a class="nav-link" href="faq.html">FAQ</a>
-                    <a class="nav-link" href="#">Review</a>
+                    <a class="nav-link" href="reviews.html">Review</a>
                     <a class="nav-link" href="#">Contact me</a>
                 </div>
                 </div>
@@ -43,10 +55,10 @@
         </p>
 
         <ul class="info-list">
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
         </ul>
 
         <img src="assets/images/catering.webp" alt="">
@@ -60,10 +72,10 @@
         </p>
 
         <ul class="info-list">
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
         </ul>
 
         <img src="assets/images/small-event.webp" alt="">
@@ -77,10 +89,10 @@
         </p>
 
         <ul class="info-list">
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
         </ul>
 
         <img src="assets/images/cooking-class.webp" alt="">
