--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
 </head>
 <body>
 
-    <header class="content-grid">
+    <!-- <header class="content-grid">
         <div class="hero full-width">
             <h1>Puglia Flavors</h1>
             <h2>authentic Apulian taste</h2>
+        </div>
+    </header> -->
+
+    <header>
+        <img src="assets/images/logo.png" alt="" class="mx-auto mt-3">
+        <div class="text-center">
+            <a href="">
+                <i class="fa-brands fa-instagram fa-xl px-2"></i>
+            </a>
+            <a href="">
+                <i class="fa-brands fa-linkedin-in fa-xl px-2"></i>
+            </a>
         </div>
     </header>
 
@@ -34,7 +46,7 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     <a class="nav-link" href="services.html">Services</a>
                     <a class="nav-link" href="faq.html">FAQ</a>
-                    <a class="nav-link" href="#">Review</a>
+                    <a class="nav-link" href="reviews.html">Review</a>
                     <a class="nav-link" href="#">Contact me</a>
                 </div>
                 </div>
