added contact form, modified colors, modified footer

--- a/faq.html
+++ b/faq.html
@@ -40,7 +40,7 @@
                     <a class="nav-link" href="services.html">Services</a>
                     <a class="nav-link active" aria-current="page" href="faq.html">FAQ</a>
                     <a class="nav-link" href="reviews.html">Review</a>
-                    <a class="nav-link" href="#">Contact me</a>
+                    <a class="nav-link" href="contact-me.html">Contact me</a>
                 </div>
                 </div>
             </div>
@@ -101,10 +101,18 @@
     <!--footer-->
     <footer class="content-grid">
         <div>
+            <p>
+                Denominazione Sociale, Sede Legale, Codice Fiscale e Partita IVA, Numero di Iscrizione al Registro delle Imprese, Capitale Sociale
+            </p>
             <span>
-                © Copyright 2024 Puglia Flavors
                 <a href="">
-                    All Rights Reserved
+                    <i class="fa-solid fa-lock"></i>
+                    Privacy
+                </a>
+                -
+                <a href="">
+                    <i class="fa-solid fa-cookie"></i>
+                    Cookie Policy
                 </a>
             </span>
             <span>
