--- a/faq.html
+++ b/faq.html
@@ -20,10 +20,13 @@
                 <img src="assets/images/logo.webp" alt="" class="mx-auto">
                 <div class="text-center">
                     <a href="">
-                        <i class="fa-brands fa-instagram fa-xl px-2"></i>
+                        <i class="fa-brands fa-instagram fa-xl"></i>
                     </a>
                     <a href="">
-                        <i class="fa-brands fa-linkedin-in fa-xl px-2"></i>
+                        <i class="fa-brands fa-facebook fa-xl px-4"></i>
+                    </a>
+                    <a href="">
+                        <i class="fa-brands fa-linkedin-in fa-xl"></i>
                     </a>
                 </div>
             </header>
