--- a/reviews.html
+++ b/reviews.html
@@ -20,10 +20,13 @@
                 <img src="assets/images/logo.webp" alt="" class="mx-auto">
                 <div class="text-center">
                     <a href="">
-                        <i class="fa-brands fa-instagram fa-xl px-2"></i>
+                        <i class="fa-brands fa-instagram fa-xl"></i>
                     </a>
                     <a href="">
-                        <i class="fa-brands fa-linkedin-in fa-xl px-2"></i>
+                        <i class="fa-brands fa-facebook fa-xl px-4"></i>
+                    </a>
+                    <a href="">
+                        <i class="fa-brands fa-linkedin-in fa-xl"></i>
                     </a>
                 </div>
             </header>
@@ -66,13 +69,13 @@
         
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="assets/images/catering.webp" class="d-block w-100" alt="...">
+                        <img src="assets/images/catering.webp" class="d-block" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="assets/images/small-event.webp" class="d-block w-100" alt="...">
+                        <img src="assets/images/small-event.webp" class="d-block" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="assets/images/cooking-class.webp" class="d-block w-100" alt="...">
+                        <img src="assets/images/cooking-class.webp" class="d-block" alt="...">
                       </div>
                     </div>
         
