removed old obsolete classes

--- a/reviews.html
+++ b/reviews.html
@@ -31,7 +31,7 @@
                 </div>
             </header>
 
-            <main class="content-grid">
+            <main>
 
                 <nav class="navbar navbar-expand-lg sticky-top border-bottom">
                     <div class="container-fluid px-0">
@@ -137,7 +137,11 @@
                 <h2>See More Reviews</h2>
         
                 <p>
-                    Want to know more about the experiences of our past clients? Head over to our <a href="https://www.google.com">Google profile</a> where you'll find a wealth of reviews that highlight the flavors, service, and unforgettable dining experiences Chef Claudio offers. From intimate dinners to larger events, our customers consistently rave about the authentic taste of Puglia. Don't just take our word for it—explore what others have to say and get inspired for your own culinary journey!
+                    Want to know more about the experiences of our past clients? Head over to our <a href="#">Google profile</a> where you'll find a wealth of reviews that highlight the flavors, service, and unforgettable dining experiences Chef Claudio offers.
+                </p>
+
+                <p>
+                    From intimate dinners to larger events, our customers consistently rave about the authentic taste of Puglia. Don't just take our word for it—explore what others have to say and get inspired for your own culinary journey!
                 </p>
         
             </main>
