--- a/contact-me.html
+++ b/contact-me.html
@@ -31,7 +31,7 @@
                 </div>
             </header>
 
-            <main class="content-grid">
+            <main>
 
                 <nav class="navbar navbar-expand-lg sticky-top border-bottom">
                     <div class="container-fluid px-0">
@@ -105,7 +105,7 @@
                     <div class="mb-3 full-width">
                         <label for="message">Message</label>
                         <textarea id="message" name="message" class="form-control" rows="5"></textarea>
-                    </div>
+                    </div>                      
                     <div class="form-action">
                         <button type="submit" class="btn">Submit</button>
                     </div>
