--- a/experiences.html
+++ b/experiences.html
@@ -31,7 +31,7 @@
                 </div>
             </header>
         
-            <main class="content-grid">
+            <main>
         
                 <nav class="navbar navbar-expand-lg sticky-top border-bottom">
                     <div class="container-fluid px-0">
