added privacy policy page, removed cookie policy

--- a/faq.html
+++ b/faq.html
@@ -143,17 +143,10 @@
                     <p>
                         Denominazione Sociale, Sede Legale, Codice Fiscale e Partita IVA, Numero di Iscrizione al Registro delle Imprese, Capitale Sociale
                     </p>
-                    <span>
-                        <a href="">
-                            <i class="fa-solid fa-lock"></i>
-                            Privacy
-                        </a>
-                        -
-                        <a href="">
-                            <i class="fa-solid fa-cookie"></i>
-                            Cookie Policy
-                        </a>
-                    </span>
+                    <a href="privacy-policy.html">
+                        <i class="fa-solid fa-lock"></i>
+                        Privacy Policy
+                    </a>
                 </div>
             </footer>
 
